--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Honeycomb Grid Layout In Pure CSS</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Maven+Pro&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -168,7 +169,11 @@
             vitae.
           </h3>
 
-          <h4>Elm St. 14/05 Lost City + 3528 331 86 35 info@hexalcorp.com</h4>
+          <ul>
+            <li>Elm St. 14/05 Lost City</li>
+            <li>+ 3528 331 86 35</li>
+            <li>info@hexalcorp.com</li>
+          </ul>
         </div>
       </div>
     </div>
