--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Honeycomb Grid Layout In Pure CSS</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -13,6 +17,12 @@
   </head>
   <body>
     <nav>
+      <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
       <ul class="menu-container">
         <li><a href="" class="menu-link">Portfolio</a></li>
         <li><a href="" class="menu-link">About</a></li>
@@ -178,15 +188,6 @@
       </div>
     </div>
 
-    <!-- <div class="section arr">
-      <div>
-        <span
-          >&copy;
-          <?php echo date('Y'); 
-           ?>
-          Built with lots of caffeine. All rights reserved Laima Nam</span
-        >
-      </div>
-    </div> -->
+    <script src="app.js"></script>
   </body>
 </html>
