--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <li><a href="" class="menu-link">Portfolio</a></li>
         <li><a href="" class="menu-link">About</a></li>
         <div class="img-on-img">
-          <li><img src="/img/Pointy Thingy.png" alt="logo" class="logo1" /></li>
-          <li><img src="/img/Logo.png" alt="logo" class="logo" /></li>
+          <li><img src="img/PointyThingy.png" alt="logo" class="logo1" /></li>
+          <li><img src="img/logo.png" alt="logo" class="logo" /></li>
         </div>
         <li><a href="" class="menu-link">Blog</a></li>
         <li><a href="" class="menu-link">Get in touch</a></li>
@@ -38,7 +38,7 @@
     <div class="section hero">
       <ul class="honeycomb">
         <li class="honeycomb-cell">
-          <img class="honeycomb-cell_image" src="/img/Clip.png" />
+          <img class="honeycomb-cell_image" src="img/Clip.png" />
           <div class="honeycomb-cell_title"></div>
         </li>
         <li class="honeycomb-cell">
@@ -111,22 +111,22 @@
             <a href="https://facebook.com" target="_blank"
               ><img
                 class="media-img"
-                src="/img/Facebook.png"
+                src="img/facebook.png"
                 alt="facebook logo"
             /></a>
             <a href="https://twitter.com" target="_blank"
-              ><img class="media-img" src="/img/Twitter.png" alt="twitter logo"
+              ><img class="media-img" src="img/twitter.png" alt="twitter logo"
             /></a>
             <a href="https://pinterest.com" target="_blank"
               ><img
                 class="media-img"
-                src="/img/Pinterest.png"
+                src="img/pinterest.png"
                 alt="pinterest logo"
             /></a>
             <a href="https://linkedin.com" target="_blank"
               ><img
                 class="media-img"
-                src="/img/Linkedin.png"
+                src="img/linkedin.png"
                 alt="linkedin logo"
             /></a>
           </div>
